added cloudinary link for favicon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://clipart-library.com/images/kc8okqzqi.png" />
+    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dgifdj6nx/image/upload/v1711739461/TeaWhip-test2ndex_dcsvfg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TeaWhips</title>
   </head>
